--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
-            <li>03/2022: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
+            <li>03/2023: Invited talks at University and Tokyo and Amazon on <a href="resources/grounding_LMs.pdf">grounding language models to real-world environments</a>.</li>
+            <li>03/2023: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
             <li>12/2022: Serve as Area Chair for ACL'23.</li>
             <li>11/2022: Serve as Workflow Co-Chair for SIGKDD'23.</li>
             <li>10/2022: Excited that our <a href="https://arxiv.org/abs/2204.08109">ArcaneQA</a> paper won the Outstanding Paper Award at COLING'22 (top 15 out of 2253 submissions)!</li>
