--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
+            <li>05/2023: 6 papers accepted to ACL'23. Congrats to all the students and collaborators!</li>
             <li>03/2023: Invited talks at University and Tokyo and Amazon on <a href="resources/grounding_LMs.pdf">grounding language models to real-world environments</a>.</li>
             <li>03/2023: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
             <li>12/2022: Serve as Area Chair for ACL'23.</li>
@@ -216,20 +217,11 @@
 
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
-              <li>
-              <span class="paperTitle"><i>Don't Generate, Discriminate</i>: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
-              <span class="paperAuthor">Yu Gu, Xiang Deng, Yu Su. arXiv preprint arXiv:2212.09736, 2022</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09736">paper</a>]</span>
-              </li>
+              
               <li>
               <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
               <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su. arXiv preprint arXiv:2212.09724, 2022</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
-              </li>
-              <li>
-              <span class="paperTitle">Privacy-Preserving Domain Adaptation of Semantic Parsers</span> <br />
-              <span class="paperAuthor">Fatemehsadat Mireshghallah, Richard Shin, Yu Su, Tatsunori Hashimoto, Jason Eisner. arXiv preprint arXiv:2212.10520, 2022</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.10520">paper</a>]</span>
               </li>
               <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
@@ -240,7 +232,37 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
-              <li>
+                <li>
+                <span class="paperTitle"><i>Don't Generate, Discriminate</i>: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
+                <span class="paperAuthor">Yu Gu, Xiang Deng, Yu Su. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09736">paper</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Few-shot In-context Learning on Knowledge Base Question Answering</span> <br />
+                  <span class="paperAuthor">Tianle Li, Xueguang Ma, Alex Zhuang, Yu Gu, Yu Su, Wenhu Chen. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
+                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Federated Learning for Semantic Parsing: Task Formulation, Evaluation Setup, New Algorithms</span> <br />
+                  <span class="paperAuthor">Tianshu Zhang, Changchang Liu, Wei-Han Lee, Yu Su, Huan Sun. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
+                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Privacy-Preserving Domain Adaptation of Semantic Parsers</span> <br />
+                  <span class="paperAuthor">Fatemehsadat Mireshghallah, Richard Shin, Yu Su, Tatsunori Hashimoto, Jason Eisner. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.10520">paper</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Text-to-SQL Error Correction with Language Models of Code</span> <br />
+                  <span class="paperAuthor">Ziru Chen, Shijie Chen, Michael White, Raymond Mooney, Ali Payani, Jayanth Srinivasa, Yu Su, Huan Sun. In the Annual Conference of the Association for Computational Linguistics, 2023, short paper (<b>ACL'23</b>)</span>
+                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Aligning Instruction Tasks Unlocks Large Language Models as Zero-Shot Relation Extractors</span> <br />
+                  <span class="paperAuthor">Kai Zhang, Bernal Jimenez Gutierrez, Yu Su. Findings of the Annual Conference of the Association for Computational Linguistics, 2023 (<b>Findings of ACL'23</b>)</span>
+                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
                 <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su. Workshop on Interactive Learning for Natural Language Processing@NeurIPS, 2022 (<b>InterNLP'22</b>)</span>
                 <span class="paperResource"> [<a href="https://internlp.github.io/documents/2022/papers/25.pdf">paper</a>]</span>
