--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
             <li>05/2023: 6 papers accepted to ACL'23. Congrats to all the students and collaborators!</li>
+            <li>05/2023: Honored to receive support from NIH R01 for our research on AI and biomedicine!</li>
+            <li>04/2023: Honored to receive support from President Johnson for our research on large language models!</li>
             <li>03/2023: Invited talks at University and Tokyo and Amazon on <a href="resources/grounding_LMs.pdf">grounding language models to real-world environments</a>.</li>
             <li>03/2023: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
             <li>12/2022: Serve as Area Chair for ACL'23.</li>
