--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <li>Alison Zhong (SU22 &#8211)</li>
           <li>Sparsh Kustagishettar (SU22 &#8211)</li>
           <li>Clay Washington (AU21 &#8211)</li>
-          <li>Nikolas McNeal (AU21 &#8211)</li>
+          <li><a href="https://nikolasmcneal.github.io/">Nikolas McNeal</a> (AU21 &#8211 SU23) &#x2192; Ph.D. at Georgia Tech</li>
           <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2020 &#8211 2021) &#x2192; Ph.D. at OSU</li>
         </ul>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
@@ -242,7 +242,7 @@
                 <li>
                   <span class="paperTitle">Few-shot In-context Learning on Knowledge Base Question Answering</span> <br />
                   <span class="paperAuthor">Tianle Li, Xueguang Ma, Alex Zhuang, Yu Gu, Yu Su, Wenhu Chen. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
-                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.01750">paper</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Federated Learning for Semantic Parsing: Task Formulation, Evaluation Setup, New Algorithms</span> <br />
