--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
         </ul>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
         <ul>
-          <li>Alison Zhong (SU22 &#8211)</li>
-          <li>Sparsh Kustagishettar (SU22 &#8211)</li>
-          <li>Clay Washington (AU21 &#8211)</li>
-          <li><a href="https://nikolasmcneal.github.io/">Nikolas McNeal</a> (AU21 &#8211 SU23) &#x2192; Ph.D. at Georgia Tech</li>
-          <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2020 &#8211 2021) &#x2192; Ph.D. at OSU</li>
+          <li>Alison Zhong </li>
+          <li>Sparsh Kustagishettar </li>
+          <li>Clay Washington</li>
+          <li><a href="https://nikolasmcneal.github.io/">Nikolas McNeal</a> &#x2192; Ph.D. at Georgia Tech</li>
+          <li><a href="https://samuelstevens.me/">Sam Stevens</a>  &#x2192; Ph.D. at OSU</li>
         </ul>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
         <ul>
