--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@
 
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
-              
+            <li>
+              <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
+              <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun. arXiv preprint arXiv:2305.06311, 2023</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>]</span>
+              </li>
               <li>
               <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
               <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su. arXiv preprint arXiv:2212.09724, 2022</span>
