--- a/index.html
+++ b/index.html
@@ -220,18 +220,23 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">Memorization for Good: Encryption with Autoregressive Language Models</span> <br />
+              <span class="paperAuthor">Samuel Stevens, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.10445">paper</a>]</span>
+              </li>
+              <li>
               <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
-              <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun. arXiv preprint arXiv:2305.06311, 2023</span>
+              <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>]</span>
               </li>
               <li>
               <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
-              <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su. arXiv preprint arXiv:2212.09724, 2022</span>
+              <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
               </li>
               <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
-              <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2212.04088, 2022</span>
+              <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>]</span>
               </li>
 	        </ul>
@@ -266,7 +271,7 @@
                 <li>
                   <span class="paperTitle">Aligning Instruction Tasks Unlocks Large Language Models as Zero-Shot Relation Extractors</span> <br />
                   <span class="paperAuthor">Kai Zhang, Bernal Jimenez Gutierrez, Yu Su. Findings of the Annual Conference of the Association for Computational Linguistics, 2023 (<b>Findings of ACL'23</b>)</span>
-                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.11159">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
