--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <li>
               <span class="paperTitle">Memorization for Good: Encryption with Autoregressive Language Models</span> <br />
               <span class="paperAuthor">Samuel Stevens, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.10445">paper</a>]</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.10445">paper</a>] [<a href="https://samuelstevens.me/research/encryption/">blog</a>] [<a href="https://github.com/OSU-NLP-Group/SELM">code</a>]</span>
               </li>
               <li>
               <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
