--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <li>
                   <span class="paperTitle">Aligning Instruction Tasks Unlocks Large Language Models as Zero-Shot Relation Extractors</span> <br />
                   <span class="paperAuthor">Kai Zhang, Bernal Jimenez Gutierrez, Yu Su. Findings of the Annual Conference of the Association for Computational Linguistics, 2023 (<b>Findings of ACL'23</b>)</span>
-                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.11159">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.11159">paper</a>] [<a href="https://github.com/OSU-NLP-Group/QA4RE">code</a>] </span>
                 </li>
                 <li>
                 <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
