--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li>05/2023: 6 papers accepted to ACL'23. Congrats to all the students and collaborators!</li>
             <li>05/2023: Honored to receive support from NIH R01 for our research on AI and biomedicine!</li>
             <li>04/2023: Honored to receive support from President Johnson for our research on large language models!</li>
-            <li>03/2023: Invited talks at University and Tokyo and Amazon on <a href="resources/grounding_LMs.pdf">grounding language models to real-world environments</a>.</li>
+            <li>03/2023: Invited talks at University of Tokyo and Amazon on <a href="resources/grounding_LMs.pdf">grounding language models to real-world environments</a>.</li>
             <li>03/2023: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
             <li>12/2022: Serve as Area Chair for ACL'23.</li>
             <li>11/2022: Serve as Workflow Co-Chair for SIGKDD'23.</li>
