--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Unraveling the Behavior of Large Language Models in Knowledge Conflicts
+              </span> <br />
+              <span class="paperAuthor">Jian Xie, Kai Zhang, Jiangjie Chen, Renze Lou, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13300">paper</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Knowledge-Conflict">code</a>]</span>
+              </li>
+            <li>
               <span class="paperTitle">Memorization for Good: Encryption with Autoregressive Language Models</span> <br />
               <span class="paperAuthor">Samuel Stevens, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.10445">paper</a>] [<a href="https://samuelstevens.me/research/encryption/">blog</a>] [<a href="https://github.com/OSU-NLP-Group/SELM">code</a>]</span>
@@ -227,7 +233,7 @@
               <li>
               <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
               <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>]</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>] [<a href="https://github.com/OSU-NLP-Group/AttrScore">code</a>] [<a href="https://huggingface.co/datasets/osunlp/AttrScore">data</a>]</span>
               </li>
               <li>
               <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
@@ -266,7 +272,7 @@
                 <li>
                   <span class="paperTitle">Text-to-SQL Error Correction with Language Models of Code</span> <br />
                   <span class="paperAuthor">Ziru Chen, Shijie Chen, Michael White, Raymond Mooney, Ali Payani, Jayanth Srinivasa, Yu Su, Huan Sun. In the Annual Conference of the Association for Computational Linguistics, 2023, short paper (<b>ACL'23</b>)</span>
-                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13073">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Auto-SQL-Correction">code</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Aligning Instruction Tasks Unlocks Large Language Models as Zero-Shot Relation Extractors</span> <br />
