--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
               </li>
               <li>
+                <span class="paperTitle">Error Detection for Text-to-SQL Semantic Parsing</span> <br />
+                <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su.</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>]</span>
+                </li>
+              <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
               <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>]</span>
