--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
                 <li>
                   <span class="paperTitle">Few-shot In-context Learning on Knowledge Base Question Answering</span> <br />
                   <span class="paperAuthor">Tianle Li, Xueguang Ma, Alex Zhuang, Yu Gu, Yu Su, Wenhu Chen. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
-                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.01750">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.01750">paper</a>] [<a href="https://github.com/ltl3A87/KB-BINDER">code</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Federated Learning for Semantic Parsing: Task Formulation, Evaluation Setup, New Algorithms</span> <br />
                   <span class="paperAuthor">Tianshu Zhang, Changchang Liu, Wei-Han Lee, Yu Su, Huan Sun. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
-                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.17221">paper</a>] [<a href="https://github.com/OSU-NLP-Group/FL4SemanticParsing">code</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Privacy-Preserving Domain Adaptation of Semantic Parsers</span> <br />
@@ -322,7 +322,7 @@
                 <li>
                 <span class="paperTitle">Bridging the Generalization Gap in Text-to-SQL Parsing with Schema Expansion</span> <br />
                 <span class="paperAuthor">Chen Zhao, Yu Su, Adam Pauls, Emmanouil Antonios Platanios. In the Annual Conference of the Association for Computational Linguistics, 2022 (<b>ACL'22</b>)</span>
-                <span class="paperResource"> [<a href="https://aclanthology.org/2022.acl-long.381/">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://aclanthology.org/2022.acl-long.381/">paper</a>] [<a href="https://github.com/microsoft/text-to-sql-schema-expansion-generalization">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">One Step at a Time: Long-Horizon Vision-and-Language Navigation with Milestones</span> <br />
