--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
             <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2118240&HistoricalAwards=false">2118240</a>, 
             <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2112606&HistoricalAwards=false">2112606</a>,
             <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2137806&HistoricalAwards=false">2137806</a>),
-            ARL, Amazon, Walmart, Cisco, Fujitsu, and OSU TDAI for supporting our research.
+            ARL, NIH, Amazon, Walmart, Cisco, Fujitsu, and OSU TDAI for supporting our research.
           </li>
         </ul>
     </div>
