--- a/index.html
+++ b/index.html
@@ -220,10 +220,16 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
+              </span> <br />
+              <span class="paperAuthor">Xiang Deng, Yu Gu, Boyuan Zheng, Shijie Chen, Samuel Stevens, Boshi Wang, Huan Sun, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.06070">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web/">project website</a>]</span>
+              </li>
+            <li>
               <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Unraveling the Behavior of Large Language Models in Knowledge Conflicts
               </span> <br />
-              <span class="paperAuthor">Jian Xie, Kai Zhang, Jiangjie Chen, Renze Lou, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13300">paper</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Knowledge-Conflict">code</a>]</span>
+              <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Renze Lou, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13300">paper</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Knowledge-Conflict">code</a>] (*: Equal Contribution)</span>
               </li>
             <li>
               <span class="paperTitle">Memorization for Good: Encryption with Autoregressive Language Models</span> <br />
