--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.06070">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web/">project website</a>]</span>
               </li>
             <li>
-              <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Unraveling the Behavior of Large Language Models in Knowledge Conflicts
+              <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Unraveling the Behavior of Large Language Models in Knowledge Clashes
               </span> <br />
               <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Renze Lou, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13300">paper</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Knowledge-Conflict">code</a>] (*: Equal Contribution)</span>
