--- a/index.html
+++ b/index.html
@@ -215,10 +215,16 @@
         <div class="divider"></div>
 
         <div class="publication">
-	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://www.semanticscholar.org/author/Yu-Su/1758652">Semantic Scholar</a>)</div>	
+	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>)</div>	
 
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
+            <li>
+              <span class="paperTitle">MagicBrush: A Manually Annotated Dataset for Instruction-Guided Image Editing
+              </span> <br />
+              <span class="paperAuthor">Kai Zhang*, Lingbo Mo*, Wenhu Chen, Huan Sun, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.10012">paper</a>] [<a href="https://osu-nlp-group.github.io/MagicBrush/">project website</a>] (*: Equal Contribution)</span>
+              </li>
             <li>
               <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
               </span> <br />
