--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <li>
                 <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
                 <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su. Workshop on Interactive Learning for Natural Language Processing@NeurIPS, 2022 (<b>InterNLP'22</b>)</span>
-                <span class="paperResource"> [<a href="https://internlp.github.io/documents/2022/papers/25.pdf">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://internlp.github.io/2022/documents/2022/papers/25.pdf">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">When More Data Hurts: A Troubling Quirk in Developing Broad-Coverage Natural Language Understanding Systems</span> <br />
@@ -468,7 +468,7 @@
 		<li>
                 <span class="paperTitle">Building Natural Language Interfaces to Web APIs</span> <br />
                 <span class="paperAuthor">Yu Su, Ahmed Hassan Awadallah, Madian Khabsa, Patrick Pantel, Michael Gamon, Mark Encarnacion. In Proc. of the ACM International Conference on Information and Knowledge Management, 2017, oral (<b>CIKM’17</b>)</span>
-                <span class="paperResource"> [<a href="papers/cikm17_nl2api.pdf">paper</a>] </span>
+                <span class="paperResource"> [<a href="papers/cikm17_nl2api.pdf">paper</a>] [<a href="https://www.microsoft.com/en-us/download/details.aspx?id=58222">data</a>] </span>
 		</li>
 		<li>
                 <span class="paperTitle">Cross-domain Semantic Parsing via Paraphrasing</span> <br />
