--- a/index.html
+++ b/index.html
@@ -261,12 +261,17 @@
               <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
               <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>]</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>] [<a href="https://embodied-ai.org/papers/2023/7.pdf">Embodied AI workshop at CVPR'23</a>]</span>
               </li>
 	        </ul>
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                <span class="paperTitle">SalsaBot: Towards a Robust and Generalizable Embodied Agent</span> <br />
+                <span class="paperAuthor">Chan Hee Song*, Jiaman Wu*, Ju-Seung Byun, Zexin Xu, Vardaan Pahuja, Goonmeet Bajaj, Samuel Stevens, Ziru Chen, Yu Su. Short version in the Embodied AI Workshop at CVPR 2023, long version in the Proceedings of Alexa Prize SimBot Challenge.</span>
+                <span class="paperResource"> [<a href="https://assets.amazon.science/ea/b7/0895f4e0468680903efcfd67e795/salsabot-report-1.pdf">long version</a>][<a href="https://embodied-ai.org/papers/2023/10.pdf">short version</a>] (*: Equal Contribution)</span>
+                </li>
                 <li>
                 <span class="paperTitle">Biomedical Language Models are Robust to Sub-optimal Tokenization</span> <br />
                 <span class="paperAuthor">Bernal Jimenez Gutierrez, Huan Sun, Yu Su. In the 22nd BioNLP Workshop at ACL, 2023 (<b>BioNLP'23</b>)</span>
