--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <li>
                 <span class="paperTitle">Biomedical Language Models are Robust to Sub-optimal Tokenization</span> <br />
                 <span class="paperAuthor">Bernal Jimenez Gutierrez, Huan Sun, Yu Su. In the 22nd BioNLP Workshop at ACL, 2023 (<b>BioNLP'23</b>)</span>
-                <span class="paperResource"> [<a href="#">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.17649">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle"><i>Don't Generate, Discriminate</i>: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
