--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </li>
                 <li>
                   <span class="paperTitle">Privacy-Preserving Domain Adaptation of Semantic Parsers</span> <br />
-                  <span class="paperAuthor">Fatemehsadat Mireshghallah, Richard Shin, Yu Su, Tatsunori Hashimoto, Jason Eisner. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
+                  <span class="paperAuthor">Fatemehsadat Mireshghallah, Yu Su, Tatsunori Hashimoto, Jason Eisner, Richard Shin. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
                   <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.10520">paper</a>]</span>
                 </li>
                 <li>
