--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
                 <li>
                 <span class="paperTitle">Biomedical Language Models are Robust to Sub-optimal Tokenization</span> <br />
                 <span class="paperAuthor">Bernal Jimenez Gutierrez, Huan Sun, Yu Su. In the 22nd BioNLP Workshop at ACL, 2023 (<b>BioNLP'23</b>)</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.17649">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.17649">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Bio-Tokenization">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle"><i>Don't Generate, Discriminate</i>: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
                 <span class="paperAuthor">Yu Gu, Xiang Deng, Yu Su. In the Annual Conference of the Association for Computational Linguistics, 2023 (<b>ACL'23</b>)</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09736">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09736">paper</a>] [<a href="https://github.com/dki-lab/Pangu">code</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Few-shot In-context Learning on Knowledge Base Question Answering</span> <br />
